apollo-router/src/uplink/snapshots/uhg_custom_appollo_roouter__uplink__license_enforcement__test__restricted_authorization_directives_via_schema.snap
---
source: apollo-router/src/uplink/license_enforcement.rs
assertion_line: 726
expression: report.to_string()
---
Schema features:
* @authenticated
  https://specs.apollo.dev/authenticated/v0.1

* @requiresScopes
  https://specs.apollo.dev/requiresScopes/v0.1
