apollo-router/src/uplink/snapshots/uhg_custom_appollo_roouter__uplink__license_enforcement__test__restricted_unix_socket_via_schema.snap
---
source: apollo-router/src/uplink/license_enforcement.rs
assertion_line: 741
expression: report.to_string()
---
Schema features:
* @join__Graph.url
  https://specs.apollo.dev/join/v0.3

Unix socket support for subgraph requests is restricted to Enterprise users
